<resources>
    <string name="app_name">GBA Emulator Box</string>
    <string name="ap_ads_main">ca-app-pub-3928471692897353~6614013886</string>
    <string name="ap_ads_chanye">ca-app-pub-3928471692897353/7116576763</string>
    <string name="slote_save_desc">Save game data to slot:%d</string>
    <string name="slote_load_desc">Load game data to slot:%d</string>
    <string name="screen_capture">Screen capture save to:%s</string>
    <string name="set_game_cover">Set the game cover</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="screen_capture_delet">Screen capture deleted</string>
    <string name="add_game_roms">Search Rom File</string>
    <string name="game_set">Settings</string>
    <string name="search_folder">Search folder:</string>
    <string name="find_roms">Found %d ROMs</string>
    <string name="first_game_file_scanle">Scan game files</string>
    <string name="first_game_file_sacnle_desc">\t Welcome to use GBA emulator,
        \n\t GBA Emulator Box Need file read and write permissions, we only use it to scan game files，Please click to agree.</string>
    <string name="progres_num">%</string>
    <string name="notice">Notice</string>
    <string name="tips_exit_game">Do you want to quit the game?</string>
    <string name="tips_exit_game_button1">Exit and save</string>
    <string name="tips_exit_game_button2">Only Exit</string>
    <string name="file_read_write_permiss">File read and write permissions</string>
    <string name="file_read_write_permiss_desc">
        Dear users:
        \n\t Welcome to use GBA emulator. The emulator needs file read and write permissions to scan game ROM files.
        \n\t Click the "Agree" button and the simulator will apply for file read and write permissions.
        \n\t Click the Cancel button, the emulator will not scan the game ROM file, you can open the scan game ROM file function again through the menu.</string>
    <string name="agree">Agree</string>
    <string name="general_set">General Setting</string>
    <string name="game_state">Game state</string>
    <string name="cheat_code">Cheat Code</string>
    <string name="cheat_code_status">Cheat code status</string>
    <string name="enable">Enable</string>
    <string name="not_enabled">Not Enabled</string>
    <string name="load_slot_data">Load slot data</string>
    <string name="load_slot_data_content">Are you sure Load slot 1 data? This slot data will overwrite your current game progress.</string>
    <string name="save_slot_data_content">Are you sure Save slot 1 data? This slot data will overwrite your previous game slot 1 data.</string>
    <string name="load_slot_file_not_find">Slot data not exist</string>
    <string name="slot_save_time">Data storage time:</string>
    <string name="save_slot_data">Save slot data</string>
    <string name="game_name">By Name</string>
    <string name="game_collect">By Collect</string>
    <string name="game_file_path">Game file path :\t</string>
    <string name="game_file_size">Game file size :\t</string>
    <string name="game_save_slot">Game save slot :\t</string>
    <string name="last_play_time">Last play time :\t</string>
    <string name="game_play_time">Game play time :\t</string>
    <string name="delete_this_game">Delete this game</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="no">No</string>
    <string name="game_archive">Archive</string>
    <string name="cheat">Cheat</string>
    <string name="restart">Restart</string>
    <string name="audio">Audio</string>
    <string name="button_control">Button Scale</string>
    <string name="gamepad_settings">Gamepad</string>
    <string name="cheat_name">Cheat Name</string>
    <string name="add_cheat_code">Add Cheat Code</string>
    <string name="slot">Slot:%d</string>
    <string name="save_game_data_slot">Save Game Data to Slot %d</string>
    <string name="time_s">Time:%s</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="btn_size">Button scale size: %d</string>
    <string name="reset">Reset</string>
    <string name="game_pad_1">Player Gamepad 1</string>
    <string name="game_pad_2">Player Gamepad 2</string>
    <string name="key_up">KEY UP</string>
    <string name="key_down">KEY DOWN</string>
    <string name="key_left">KEY LEFT</string>
    <string name="key_right">KEY RIGHT</string>
    <string name="key_start">KEY START</string>
    <string name="key_select">KEY SELECT</string>
    <string name="key_l">KEY L</string>
    <string name="key_s">KEY R</string>
    <string name="key_a">KEY A</string>
    <string name="key_b">KEY B</string>
    <string name="key_r">KEY RESET</string>
    <string name="key_v">KEY SOUND: ON/OFF</string>
    <string name="key_speed">KEY SPEED</string>
    <string name="key_rewind">KEY NONE</string>
    <string name="key_capture">KEY CAPTURE</string>
    <string name="key_saveslot1">KEY SAVE SLOT1</string>
    <string name="key_loadslot1">KEY LOAD SLOT1</string>
    <string name="gamepad_code">GamePad Code</string>
    <string name="press_hardke_">Press a hardware key...</string>
    <string name="add_cheat">Add cheat</string>
    <string name="input_chaet_name">Please input cheat name</string>
    <string name="input_chaet_code">Please input cheat code</string>
    <string name="cheat_error">Input cheat code error !</string>
    <string name="cheat_super_type">Support input cheat code type</string>
    <string name="code_type_breaker">CodeBreaker:XXXXXXXX XXXX</string>
    <string name="code_type_gameshark">GameShark:XXXXXXXX XXXXXXXX</string>
    <string name="code_type_actionreplay">ActionReplay:XXXXXXXX XXXXXXXX</string>
    <string name="code_type_vba">VBA:XXXXXXXX:XXXXXXXX</string>
    <string name="hide_button">Hide button</string>
    <string name="show_button">Show button</string>
    <string name="no_current_supperted">Sorry, not currently supported</string>
    <string name="successful">Successful</string>
    <string name="about_gba">About GBA emulator:
        \n Using the mGBA8.3 core, this simulator is still being improved. If you have any suggestions or questions, please email me and I will reply to you as soon as possible.</string>
    <string name="gba_error_exit_desc">\t very sorry, we found that the gba emulator exited abnormally, you can restore the last game record!
        \n\t Click (OK) to restore the last game record.</string>
    <string name="control_select">SELECT</string>
    <string name="control_start">START</string>
    <string name="control_menu">MENU</string>
    <string name="try_connect_net">Trying to Loading Data</string>
    <string name="wu_star_support">5 Star Support</string>
    <string name="file_not_exits">file does not exist.</string>
    <string name="quick_save">Quick Save Game</string>
    <string name="quick_read">Load Game Save</string>
</resources>
