<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/set_cheat_include_linrat_listcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/set_cheat_include_btn_addcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_cheat_code"/>
            <ListView
                android:id="@+id/set_cheat_include_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_cheat_include_linrat_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/grey">
            <EditText
                android:id="@+id/set_cheat_include_edit_codename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cheat_name"
                />
            <EditText
                android:id="@+id/set_cheat_include_edit_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cheat_code"/>
            <Button
                android:id="@+id/set_cheat_include_btn_codeok"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>