<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mdialog_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:background="@null"
            android:layout_weight="1"
            android:minWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_set"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grey"/>
        <Button
            android:background="@null"
            android:layout_weight="1"
            android:minWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_state"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grey"/>
        <Button
            android:background="@null"
            android:layout_weight="1"
            android:minWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_code"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey"/>

</LinearLayout>