<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/mdialog_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/screen_capture_imageview"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="180dp" />
        <TextView
            android:id="@+id/screen_capture_text_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="xxxxxxxxxx"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_game_cover"/>
            <Button
                android:id="@+id/screen_capture_btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"/>
            <Button
                android:id="@+id/screen_capture_btn_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>