<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mdialog_bg">
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/last_save_slot_imageview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/gba_error_exit_desc"/>
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey"></View>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/last_save_slot_btn_load"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:textColor="@color/black"
                android:background="@null"
                android:text="@string/ok"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey"></View>
            <Button
                android:id="@+id/last_save_slot_btn_cancel"
                android:layout_weight="1"
                android:minWidth="150dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>