<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mdialog_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:id="@+id/game_info_text_title"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="标题"
                android:textColor="@color/black"/>
            <ImageButton
                android:id="@+id/game_info_imgbtn_close"
                android:layout_alignParentRight="true"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@mipmap/exit_btn"
                />
        </RelativeLayout>
        <ImageView
            android:id="@+id/game_info_image_cover"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:scaleType="fitXY"
            android:background="@mipmap/ic_launcher"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_file_path"/>
                <TextView
                    android:id="@+id/game_info_text_filepath"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xxxxxxxxxxxxxxxxxxxxxxxx"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_file_size"/>
                <TextView
                    android:id="@+id/game_info_text_filesize"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xxxxxxxxxxxxxxxxxxxxxxxx"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_save_slot"/>
                <TextView
                    android:id="@+id/game_info_text_saveslot"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xxxxxxxxxxxxxxxxxxxxxxxx"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_play_time"/>
                <TextView
                    android:id="@+id/game_info_text_lasttime"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xxxxxxxxxxxxxxxxxxxxxxxx"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_play_time"/>
                <TextView
                    android:id="@+id/game_info_text_palytime"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xxxxxxxxxxxxxxxxxxxxxxxx"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/game_info_btn_delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/semicircle_btn"
        android:text="@string/delete_this_game"/>
</LinearLayout>