<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mdialog_color_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/set_dialog_btn_normal"
                android:layout_weight="1"
                android:minWidth="400dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/game_set"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey"/>
            <Button
                android:id="@+id/set_dialog_btn_slot"
                android:layout_weight="1"
                android:minWidth="400dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/game_archive"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey"/>
            <Button
                android:id="@+id/set_dialog_btn_cheat"
                android:layout_weight="1"
                android:minWidth="400dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/cheat"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey"/>
        <RelativeLayout
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey">
            <include
                android:id="@+id/set_dialog_include_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                layout="@layout/set_normal_include"
                />
            <include
                android:id="@+id/set_dialog_include_slot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                layout="@layout/set_slot_include"
                />
            <include
                android:id="@+id/set_dialog_include_cheat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                layout="@layout/set_cheat_include"
                />
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/set_dialog_btn_close"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/trans"
        android:text="@string/close"/>
</RelativeLayout>